--- a/sky-fitness-pro/src/app/globals.css
+++ b/sky-fitness-pro/src/app/globals.css
@@ -60,7 +60,7 @@ ul li {
   list-style: none;
 }
 
-@font-face {
+/* @font-face {
   font-family: 'StratosSkyeng';
   src: 
   local("StratosSkyeng"), 
@@ -69,5 +69,5 @@ ul li {
   url("../../fonts/StratosSkyeng.woff") format("woff");
   font-weight: 400;
   font-style: normal;
-}
+} */
 
